Fixed carousel items gaps

--- a/styles/carusela/desktop.carusela.css
+++ b/styles/carusela/desktop.carusela.css
@@ -1,5 +1,5 @@
 .carousel {
-    margin-top: 2rem;
+    margin: 0 15.15rem;
     min-width: 996px;
 }
 
@@ -14,7 +14,8 @@
 
 .carousel__grid-container {
     display: grid;
-    grid-template-columns: 0.25fr repeat(7, 1fr) 0.25fr;
+    grid-template-columns: 40px repeat(7, 160px) 40px;
+    gap: 2rem;
 }
 
 .arrow {
@@ -26,7 +27,6 @@
     height: auto;
     text-align: center;
     width: 40px;
-    margin: 0 20px;
     cursor: pointer;
     display: flex;
 }
@@ -40,7 +40,6 @@
 
 .item-card {
     width: 160px;
-    margin-left: 33px;
 }
 
 .item-rating {
