--- a/styles/main/desktop.main.css
+++ b/styles/main/desktop.main.css
@@ -1,5 +1,5 @@
 .main {
-    margin: 0 20.15rem;
+    margin: 0 15.15rem;
     margin-top: 2rem;
     padding: 1.8rem;
     padding-top: 1.4rem;
